--- a/style.css
+++ b/style.css
@@ -1,330 +1,3 @@
-/* body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 720px;
-    height: 480px;
-    margin: 0 auto;
-    background-image: url('img/5_background/desert(1).jpg');
-    background-position: center;
-    background-size: cover; 
-    margin: 0;
-    padding: 0;
-}
-
-
-canvas {
-    background-color: black;
-    border: 3px solid #333;
-    position: absolute;
-    z-index: 1;
-    border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    width: 720px;
-    height: 480px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-}
-
-h1 {
-    font-family: 'Bangers', cursive;
-    color: rgb(255, 238, 1);
-    background: radial-gradient(ellipse at center, #fef600, #ff7003);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-align: center;
-    font-size: 120px;
-    font-weight: 1000;
-    margin: 0;
-    margin-top: 0;
-}
-
-.startScreenContainer {
-    width: 720px;
-    height: 480px;
-    z-index: 999;
-    position: relative;
-}
-
-.startScreenButtons {
-    display: flex;
-    position: absolute;
-    top: 1%;
-    left: 38%;
-    transform: translate(-50%, -50%);
-    gap: 24px;
-    z-index: 1000;
-}
-
-.startButton {
-    width: 188px;
-    height: 62px;
-    font-size: 24px;
-    background-color: rgba(255, 165, 0);
-    z-index: 999;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.gameOverScreen {
-    position: absolute;
-    width: 720px;
-    height: 480px;
-}
-.youWonScreen {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.4);
-    width: 720px;
-    height: 480px;
-}
-
-/* #startScreen {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-} 
-
-#startImage {
-    width: 720px;
-    height: 480px;
-    border: 3px solid #333;
-    border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-}
-
-#startButton {
-    position: absolute;
-    top: 50px;
-    padding: 15px 35px;
-    font-size: 28px;
-    font-family: 'Bangers', cursive;
-    background-color: #ff6b00;
-    color: white;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
-    transition: all 0.3s ease;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-#impressum {
-    position: absolute;
-    top: 50px;
-    right: 22px;
-    padding: 15px 35px;
-    font-size: 28px;
-    font-family: 'Bangers', cursive;
-    background-color: #ff6b00;
-    color: white;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
-    transition: all 0.3s ease;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-#controls {
-    position: absolute;
-    top: 50px;
-    left: 215px;
-    padding: 15px 35px;
-    font-size: 28px;
-    font-family: 'Bangers', cursive;
-    background-color: #ff6b00;
-    color: white;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
-    transition: all 0.3s ease;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-#startButton:hover {
-    background-color: #ff8c00;
-    transform: scale(1.1);
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
-}
-
-#startButton:active {
-    transform: scale(0.95);
-}
-
-
-#impressum:hover {
-    background-color: #ff8c00;
-    transform: scale(1.1);
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
-}
-
-#impressum:active {
-    transform: scale(0.55);
-}
-
-#controls:hover {
-    background-color: #ff8c00;
-    transform: scale(1.1);
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
-}
-
-#controls:active {
-    transform: scale(0.55);
-}
-
-.hidden {
-    display: none;
-}
-
-.popup-content {
-  background: white;
-  padding: 20px;
-  border-radius: 10px;
-}
-
-#popup {
-    position: fixed;
-    top: 43%;
-    left: 50%;
-    height: 350px;
-    width: 500px;
-    transform: translate(-50%, -50%);
-    background: rgb(47 46 48 / 96%); 
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    z-index: 1000; 
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-}
-
-#popup2 {
-    position: fixed;
-    top: 43%;
-    left: 50%;
-    height: 350px;
-    width: 500px;
-    transform: translate(-50%, -50%);
-    background: rgb(47 46 48 / 96%); 
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    z-index: 1000; 
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-}
-
-h2 {
-    display: flex;
-    font-family: 'Bangers', cursive;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-    margin: 0;
-}
-
-body.popup-open::before {
-  display: block;
-}
-
-.controls-images {
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-.arrow-left {
-    width: 60px;
-    height: 60px;
-}
-
-.arrow-right {
-    width: 60px;
-    height: 60px;
-}
-
-.space-button {
-    width: 180px;
-    height: 40px;
-}
-
-.D-button {
-    width: 60px;
-    height: 60px;
-}
-
-
-.text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
-    bottom: 100px;
-    font-size: 25px;
-    font-family: 'Bangers', cursive;
-    color: #ff6b00;
-    letter-spacing: 1px;
-}
-
-.d-none {
-    display: none !important; 
-}
-
-.closePopup {
-    display: flex;
-    position: absolute;
-    right: 15px;
-    top: 20px;
-    border: none;
-    background-color:rgba(47, 46, 48, 0.176);
-    color: #ff6b00;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-#closePopup:hover {
-     transform: scale(1.1);
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
-}
-
-.txt {
-    font-family: Arial, sans-serif, cursive;
-    font-size: medium;
-    color: white;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    height: 100px;
-
-}
- */
-
-
  body {
     display: flex;
 
@@ -352,7 +25,6 @@ canvas {
     max-width: 90vw;
     max-height: 90vh;
     display: none;
-    /* ABSOLUTE CENTERING */
     position: fixed;
     top: 50%;
     left: 50%;
@@ -539,7 +211,7 @@ h1 {
 
 #popup {
     position: fixed;
-    top: 43%;
+    top: 50%;
     left: 50%;
     height: 350px;
     width: 500px;
@@ -555,23 +227,26 @@ h1 {
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
+
 #popup2 {
     position: fixed;
-    top: 43%;
+    top:  50%;
     left: 50%;
-    height: 350px;
-    width: 500px;
     transform: translate(-50%, -50%);
-    background: rgb(47 46 48 / 96%); 
+
+    width: 500px;
+    height: 350px;
+    background: rgba(47, 46, 48, 0.96);
     color: white;
+
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    z-index: 1000; 
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    z-index: 1000;
+
+    text-align: center; /* 🔥 Text zentriert */
 }
+
 
 h2 {
     display: flex;
@@ -638,7 +313,7 @@ p {
 }
 
 .closePopup {
-    display: flex;
+    /* display: flex; */
     position: absolute;
     right: 15px;
     top: 20px;
@@ -659,11 +334,10 @@ p {
     font-size: medium;
     color: white;
     text-align: center;
-    align-items: center;
     justify-content: center;
     display: flex;
     height: 100px;
-
+    margin-left: 76px;
 }
 
 .mute-btn {
@@ -685,6 +359,47 @@ p {
     background: rgba(0, 0, 0, 0.8);
 }
 
+#mobile-controls {
+    display: none;
+}
 
+#mobile-controls button {
+    pointer-events: auto;
+}
+
+@media (max-width: 700px) {
+    #mobile-controls {
+        position: fixed;
+        bottom: 90px;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+        z-index: 1000;
+        pointer-events: auto;
+    }
+
+    #mobile-controls button {
+        width: 60px;
+        height: 60px;
+        font-size: 24px;
+        font-family: Arial, sans-serif;
+        background: rgba(0,0,0,0.7);
+        color: white;
+        border: none;
+        border-radius: 50%;
+    }
+
+    .left-controls,
+    .right-controls {
+        display: flex;
+        gap: 15px;
+    }
+
+    h1 {
+        font-size: 100px;
+    }
+}
 
     
